JslParser become static and log settings improved